# peer

./: .gitignore  .vercelignore  BACKEND_CHAT.md  README.md  TODO.md  index.html  package.json  pill.html  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
api/: _backend.js  aggregate.js  auth-callback.js  automation-step.js  desktop-login.js  download-latest.js  leads.js  title.js  transcribe.js  vision-window.js
capture-sidecar/: Package.swift
capture-sidecar/Sources/HummingbirdCapture/: main.swift
capture-sidecar/Sources/PeerCapture/: Info.plist  main.swift
logos/: _gen.py
scripts/: release-macos.sh  smoke-macos.sh  submit_expense.py
site/: index.html  install.html  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/dmg/: background.tiff
src-tauri/icons/: icon.icns
src-tauri/src/: binpath.rs  chat.rs  ipc.rs  lib.rs  main.rs  saas.rs  state.rs  tray.rs
src-tauri/src/automation/: action.rs  capture.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/hotkey/: fn_tap.rs  global_chord.rs  mod.rs
src-tauri/src/pipeline/: analyze.rs  ffprobe.rs  keyframes.rs  mod.rs  prompts.rs  transcribe.rs
src-tauri/src/recording/: capture.rs  cursor.rs  mod.rs
src/lib/: ipc.ts  keys.ts  plainText.test.ts  plainText.ts
src/pill/: Pill.test.tsx  Pill.tsx  main.tsx  pill.css
src/result/: App.test.tsx  App.tsx  ChatDock.tsx  ConfirmDialog.tsx  EmptyState.tsx  FabMenu.test.tsx  FabMenu.tsx  HistorySidebar.tsx  MessageCard.tsx  RecordingPage.tsx  ResultView.tsx  Settings.test.tsx  Settings.tsx  SidebarAccount.tsx  ThinkingPage.tsx  VersionHistoryPanel.tsx  main.tsx  result.css
src/styles/: tokens.css
src/test/: setup.ts  tauriMock.ts
styles/: tokens.css
supabase/: schema.sql
