[package]
name = "peer"
version = "0.1.0"
description = "Screen-recording → Claude instruction set."
edition = "2021"
rust-version = "1.77"

[lib]
name = "peer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Override the binary filename so `tauri dev` launches `Peer`
# (capital H) — that's what the macOS Dock uses as the display name when
# running the raw binary, since dev runs don't produce an .app bundle.
[[bin]]
name = "Peer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
keyring = "3"
base64 = "0.22"
async-stream = "0.3"
once_cell = "1"
parking_lot = "0.12"
dirs = "5"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-foundation = "0.10"
core-graphics = "0.25"
